fix(themes/al-munir): logo not showing if title is hidden

--- a/themes/al-munir/styles/index.scss
+++ b/themes/al-munir/styles/index.scss
@@ -259,9 +259,11 @@ section {
 
   .logo {
     line-height: 0;
+    height: 44px;
 
     img {
       max-height: 40px;
+      height: 100%;
       margin-right: 6px;
     }
 
@@ -1352,6 +1354,13 @@ section {
         background: url(../assets/img/team-shape.svg) no-repeat center bottom;
         background-size: contain;
         z-index: 1;
+      }
+
+      img {
+        height: 100%;
+        width: 100%;
+        max-height: 300px;
+        object-fit: cover;
       }
     }
 
